# reference

./: .gitignore  .gitmodules  AlasdairCooper.Reference.sln  Directory.build.targets  README.md  global.json  nuget.config
.aspire/: settings.json
.config/: dotnet-tools.json
src/api/: AlasdairCooper.Reference.Api.csproj  Program.cs
src/api/Data/: AlasdairCooper.Reference.Api.Data.csproj  ReferenceDbContext.cs
src/api/api/: AlasdairCooper.Reference.Api.csproj  Program.cs
src/api/data/: AlasdairCooper.Reference.Api.Data.csproj  DatabaseConstants.cs
src/api/generator/: AlasdairCooper.Reference.Api.Generator.csproj  GeneratorWorker.cs  Program.cs
src/api/migrator/: AlasdairCooper.Reference.Api.Migrator.csproj  DebugWorker.cs  MigrationWorker.cs  (+1 more)
src/blazor-playground/: AlasdairCooper.Reference.BlazorPlayground.csproj  Program.cs
src/components/: AlasdairCooper.Reference.Components.csproj  DefaultComponentBase.cs  Extensions.cs  _Imports.razor
src/external-frontend/: Cargo.toml  index.html
src/external-frontend/src/: api_client.rs  auth.rs  basket.rs  global_context.rs  main.rs  signal_r_client.rs
src/internal-frontend/: AlasdairCooper.Reference.InternalFrontend.csproj  Program.cs  _Imports.razor
src/shared/: AlasdairCooper.Reference.Shared.csproj  EnumerableExtensions.cs
src/source-generators/: AlasdairCooper.Reference.SourceGenerators.csproj  FontAwesomeIconsGenerator.cs  SourceGenerationHelper.cs
tests/AlasdairCooper.Reference.SourceGenerators.Tests/: AlasdairCooper.Reference.SourceGenerators.Tests.csproj  FontAwesomeIconsGeneratorTests.cs
(+255 files in other folders)
